updated visit notes api
